test/tests/ClosureCallNoSelf.frost
function hello():String {
    return "Hello"
}

method main() {
    Console.printLine(hello())
    method a() {
        Console.printLine(hello())
        method b() {
            Console.printLine(hello())
            method c() {
                Console.printLine(hello())
            }
        }
    }
}